removing extraneous slash

--- a/resume.html
+++ b/resume.html
@@ -122,7 +122,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
           <div id="navigation"><div class="section clearfix">
 
         <h2 class="element-invisible">Main menu</h2><ul id="main-menu" class="links inline clearfix"><li class="menu-230 first"><a href="index.html">Home</a></li>
-<li class="menu-558"><a href="/node/14.html" title="Photos">Photos</a></li>
+<li class="menu-558"><a href="node/14.html" title="Photos">Photos</a></li>
 <li class="menu-324 active-trail active"><a href="resume.html" title="Rebecca Rubenstein&#039;s Resume" class="active-trail active">Resume</a></li>
 <li class="menu-627"><a href="video.html" title="Rebecca&#039;s Videos">Videos</a></li>
 <li class="menu-656"><a href="bio.html" title="About Rebecca Rubenstein">Bio</a></li>
