--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 
       
   <div class="content">
-    <p><iframe frameborder="0" height="435" scrolling="no" src="http://www.rardance.com/nivo-slider/demo/demo.html" width="1000"></iframe></p>
+    <p><iframe frameborder="0" height="435" scrolling="no" src="nivo-slider/demo/demo.html" width="1000"></iframe></p>
   </div>
 
 </div><!-- /.block -->
