--- a/video.html
+++ b/video.html
@@ -96,23 +96,23 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   
   
   <div class="content">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/35786813?title=0&amp;byline=0&amp;portrait=0" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/35786813">The Coin's Edge Teeters, Part One.</a><br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="http://vimeo.com/">Vimeo</a>.<br />Interdisiplinary Seminar, Speacial Guest. Humboldt State University, Arcata, Califorina, 2007.</p>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/35786813?title=0&amp;byline=0&amp;portrait=0" webkitallowfullscreen="" width="500"></iframe></p>
+<p><a href="https://vimeo.com/35786813">The Coin's Edge Teeters, Part One.</a><br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />Interdisiplinary Seminar, Speacial Guest. Humboldt State University, Arcata, Califorina, 2007.</p>
 <p style="text-align: center; "> </p>
-<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/72515736" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/72515736">42nd Street Opening Number</a>.<br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
+<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72515736" webkitallowfullscreen="" width="500"></iframe></p>
+<p><a href="https://vimeo.com/72515736">42nd Street Opening Number</a>.<br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
 <p> </p>
 <p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/72518227" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/72518227">42nd Street You're Getting to be a Habit With Me</a>.<br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
+<p><a href="https://vimeo.com/72518227">42nd Street You're Getting to be a Habit With Me</a>.<br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
 <p> </p>
-<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/72524099" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/72524099">42nd Street Dames Part</a> 1<br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
+<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72524099" webkitallowfullscreen="" width="500"></iframe></p>
+<p><a href="https://vimeo.com/72524099">42nd Street Dames Part</a> 1<br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
 <p> </p>
-<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/72525602" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/72525602">42nd Street Dames Part 2</a><br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, Califorina, 2011.</p>
+<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72525602" webkitallowfullscreen="" width="500"></iframe></p>
+<p><a href="https://vimeo.com/72525602">42nd Street Dames Part 2</a><br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, Califorina, 2011.</p>
 <p> </p>
-<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/73342062" webkitallowfullscreen="" width="500"></iframe></p>
-<p><a href="http://vimeo.com/73342062">While My Guitar Gently Weeps</a><br />Choreography by <a href="http://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />HeartBeat Dance Acaedemy, Belmont, California, 2011.</p>
+<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/73342062" webkitallowfullscreen="" width="500"></iframe></p>
+<p><a href="https://vimeo.com/73342062">While My Guitar Gently Weeps</a><br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />HeartBeat Dance Acaedemy, Belmont, California, 2011.</p>
 </div></div></div>  </div>
 
   
