--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   
   <div class="content">
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p> </p>
-<p><link href="http://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans" rel="stylesheet" type="text/css" /></p>
+<p><link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans" rel="stylesheet" type="text/css" /></p>
 </div></div></div>  </div>
 
   
