--- a/video.html
+++ b/video.html
@@ -102,7 +102,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 <p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72515736" webkitallowfullscreen="" width="500"></iframe></p>
 <p><a href="https://vimeo.com/72515736">42nd Street Opening Number</a>.<br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
 <p> </p>
-<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/72518227" webkitallowfullscreen="" width="500"></iframe></p>
+<p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72518227" webkitallowfullscreen="" width="500"></iframe></p>
 <p><a href="https://vimeo.com/72518227">42nd Street You're Getting to be a Habit With Me</a>.<br />Choreography by <a href="https://vimeo.com/user10120426">Rebecca Rubenstein</a> on <a href="https://vimeo.com/">Vimeo</a>.<br />South Bay Musical Theatre, Saratoga, California, 2011.</p>
 <p> </p>
 <p><iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="https://player.vimeo.com/video/72524099" webkitallowfullscreen="" width="500"></iframe></p>
